[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gcdevproxy"
description = "GoodCam Device Proxy lib"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[tool.setuptools]
packages = ["gcdevproxy"]

[tool.setuptools.package-data]
gcdevproxy = [
    "libgcdevproxy.so"
]
